force-app/main/default/objects/Form_AI_Setting__c/Form_AI_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>General settings for the SF Forms AI review engine (org default).</description>
    <label>Form AI Setting</label>
</CustomObject>