force-app/main/default/objects/Form_AI_Setting__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <label>AI Engine</label>
    <description>Which engine runs the AI form review: Agentforce or External.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>