force-app/main/default/objects/Form_AI_Setting__c/fields/LLM_API_Key__c.field-meta.xml
<CustomField>
    <fullName>LLM_API_Key__c</fullName>
    <label>LLM API Key</label>
    <description>API key for the external LLM. For production prefer a Named Credential / External Credential; this field is a convenience store for non-production orgs.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>