force-app/main/default/objects/Form_AI_Setting__c/fields/LLM_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>LLM_Endpoint__c</fullName>
    <label>LLM Endpoint</label>
    <description>External LLM API endpoint URL (used when Engine = External).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>