force-app/main/default/objects/Form_AI_Setting__c/fields/LLM_Model__c.field-meta.xml
<CustomField>
    <fullName>LLM_Model__c</fullName>
    <label>LLM Model</label>
    <description>External LLM model id (e.g. claude-opus-4-8). Used when Engine = External.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>